[package]
name = "rtodo"
version = "0.1.0"
edition = "2021"
authors = ["citrus327@outlook.com"]
homepage = "https://github.com/citrus327/rust_todo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.7", features = ["derive", "cargo"] }
serde_json = "1.0.108"
notify-rust = "4"
