[package]
name = "htodo"
version = "0.1.3"
edition = "2021"
authors = ["citrus327@outlook.com"]
homepage = "https://github.com/citrus327/rust_todo"
description = "A simple command line To-Do app built with Rust"
repository = "https://github.com/citrus327/rust_todo"
license = "MIT"
keywords = ["Todo", "CLI"]
exclude = [".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.7", features = ["derive", "cargo"] }
serde_json = "1.0.108"
notify-rust = "4"
prettytable-rs = "^0.10"
directories = "5.0"

[registry]
default = "crates-io"
